export class IScoreService {
  async getTopScores() { throw new Error("Not implemented"); }
  async saveScore(score) { throw new Error("Not implemented"); }
}
